--- a/day2/style.css
+++ b/day2/style.css
@@ -48,3 +48,7 @@ body {
   transition: all 0.05s;
   transition-timing-function: cubic-bezier(0.1, 2.7, 0.58, 1);
 }
+
+.noTransition {
+  transition: none !important;
+}
