increased precision on minute and hour hands

--- a/day2/style.css
+++ b/day2/style.css
@@ -45,6 +45,9 @@ body {
   top:50%;
   transform-origin: 100%;
   transform: rotate(90deg);
+}
+
+.second-hand {
   transition: all 0.05s;
   transition-timing-function: cubic-bezier(0.1, 2.7, 0.58, 1);
 }
