--- a/style.css
+++ b/style.css
@@ -1,7 +1,23 @@
 body {
   background: black;
   color: white;
-  font-family: sans-serif;
+  font-family: Barlow, sans-serif;
+  font-weight: 200;
+  font-size: 1.25rem;
+}
+
+h1 {
+  font-weight: 400;
+  font-size: 3rem;
+}
+
+h2 {
+  font-weight: 200;
+  font-size: 2rem;
+}
+
+ul {
+  list-style-type: none;
 }
 
 a {
